--- a/META.yml
+++ b/META.yml
@@ -1,17 +1,28 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         WebService-LastFM-SimilarArtists
-version:      0.01
-version_from: lib/WebService/LastFM/SimilarArtists.pm
-installdirs:  site
+--- #YAML:1.0
+name:               WebService-LastFM-SimilarArtists
+version:            0.02
+abstract:           Module to retrieve Related Artist information from audioscrobbler.net (last.fm)
+author:
+    - M. Blom (blom@cpan.org)
+license:            unknown
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
 requires:
-    Cache::File:                   0
-    Carp:                          0
-    File::Path:                    0
-    LWP::Simple:                   0
-    Test::Simple:                  0
-    URI::Escape:                   0
-    XML::Simple:                   0
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30
+    Cache::File:   0
+    Carp:          0
+    File::Path:    0
+    LWP::Simple:   0
+    Test::Simple:  0
+    URI::Escape:   0
+    XML::Simple:   0
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.56
+meta-spec:
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
